# fennel

./: Cargo.toml  flake.nix
crates/ecma355metadata/: Cargo.toml  rustfmt.toml
crates/ecma355metadata/examples/: dump_asm.rs  dump_method_sig.rs  dump_pe.rs  dump_table.rs
crates/ecma355metadata/src/: error.rs  guid.rs  lib.rs  metadata_image.rs  utils.rs
crates/ecma355metadata/src/cli/: access.rs  assembly_flags.rs  cli_flags.rs  cli_header.rs  field_attributes.rs  heaps.rs  metadata_header.rs  metadata_sizes.rs  method_attributes.rs  method_impl_attributes.rs  mod.rs  param_attributes.rs  stream_header.rs  type_attributes.rs
crates/ecma355metadata/src/cli/signatures/: custom_modifier.rs  method_signature.rs  mod.rs  param.rs  ret_type.rs  signature_header.rs  type_reference.rs  utils.rs
crates/ecma355metadata/src/cli/tables/: macros.rs  mod.rs  table.rs  table_handle.rs  table_index.rs  table_row.rs  tables.rs
crates/ecma355metadata/src/pe/: characteristics.rs  coff_header.rs  directory_entry.rs  memory_range.rs  mod.rs  pe_header.rs  pe_image.rs  pe_magic.rs  section_header.rs  subsystem.rs
crates/fenneli/: Cargo.toml
crates/fenneli/src/: main.rs
managed/: fennel.sln
managed/samples/Fennel.Samples/: Fennel.Samples.csproj  Program.cs
managed/src/corlibfe/: Attribute.cs  AttributeTargets.cs  AttributeUsageAttribute.cs  Boolean.cs  Byte.cs  Console.cs  Enum.cs  Exception.cs  Int32.cs  NotImplementedException.cs  Object.cs  String.cs  SystemException.cs  ValueType.cs  Void.cs  corlibfe.csproj
