[package]
name = "fenneli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ecma355metadata.path = "../ecma355metadata"
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.4.18", features = ["derive"] }
thiserror = "1.0.56"
